fix: white space on the right when transitions playing (mobile)

--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -1,3 +1,7 @@
 @import 'bulma/css/bulma.css';
 
+html,body{
+    overflow-x: hidden;
+}
+
 
